mexendo no bg introducao

--- a/index.html
+++ b/index.html
@@ -5,208 +5,210 @@
   <meta charset="UTF-8">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="css/index.css">
 
 
-  <title>Document</title>
+  <title>Home</title>
 </head>
 
 <body>
+  <div class="wrapper">
+    <header class="header">
+      <section class="logo">
+        <a href="texte.html"><img src="img/bikcraft.svg" alt="bikcraft"></a>
+      </section>
 
-  <header class="header">
-    <section class="logo">
-      <a href="texte.html"><img src="img/bikcraft.svg" alt="bikcraft"></a>
+      <nav class="menu-nav">
+        <ul>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Produto</a></li>
+          <li><a href="#">Portifolio</a></li>
+          <li><a href="#">Contato</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <div class="introducao-bg">
+      <div class="container-introducao">
+        <h1>Bicicletas Feitas a Mão</h1>
+        <blockquote class="citacao">
+          <p> " Não tenha nada em sua casa que você não considere útil ou acredita ser bonito ".</p>
+          <cite>William Morri .</cite>
+        </blockquote>
+
+
+        <a class="btn" href="#">Orçamento</a>
+
+      </div>
+    </div>
+
+    <section class="produtos">
+      <h2>Produtos</h2>
+      <div class="container-produtos">
+        <div class="produto-item">
+          <div class="produto-img">
+            <img src="img/produtos/passeio.svg" alt="Passeio">
+          </div>
+          <div class="produtos-descricao">
+            <h3>Passeio</h3>
+            <p>
+              Muito melhor do que passear pela orla a vidros fechados.
+            </p>
+          </div>
+        </div>
+
+        <div class="produto-item">
+          <div class="produto-img">
+            <img src="img/produtos/esporte.svg" alt="Esporte">
+          </div>
+          <div class="produtos-descricao">
+            <h3>Esporte</h3>
+            <p>
+              Muito melhor do que passear pela orla a vidros fechados.
+            </p>
+          </div>
+        </div>
+
+        <div class="produto-item">
+          <div class="produto-img">
+            <img src="img/produtos/retro.svg" alt="Retro">
+          </div>
+          <div class="produtos-descricao">
+            <h3>Retro</h3>
+            <p>
+              Muito melhor do que passear pela orla a vidros fechados.
+            </p>
+          </div>
+        </div>
+
+
+      </div>
+
+      <div class="call">
+        <p>Clic aqui e veja o detalhe dos produtos.</p>
+        <a href="#">produtos</a>
+      </div>
     </section>
 
-    <nav class="menu-nav">
-      <ul>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Produto</a></li>
-        <li><a href="#">Portifolio</a></li>
-        <li><a href="#">Contato</a></li>
-        <li><a href="#">Blog</a></li>
-      </ul>
-    </nav>
-  </header>
+    <!---PORTIFOLIO--->
+    <section class="portifolio">
+      <h2>portifolio</h2>
 
-  <div class="introducao-bg">
-    <div class="container">
-      <h1>Bicicletas Feitas a Mão</h1>
-      <blockquote class="citacao">
-        <p> " Não tenha nada em sua casa que você não considere útil ou acredita ser bonito ".</p>
-        <cite>William Morri .</cite>
-      </blockquote>
+      <div class="container-portifolio">
 
-      <a href="#" class="btn">Orçamento</a>
-    </div>
-  </div>
-
-  <section class="produtos">
-    <h2>Produtos</h2>
-    <div class="container-produtos">
-      <div class="produto-item">
-        <div class="produto-img">
-          <img src="img/produtos/passeio.svg" alt="Passeio">
+        <div class="portifolio-item">
+          <img src="img/portfolio/passeio.jpg" alt="Passeio">
         </div>
-        <div class="produtos-descricao">
-          <h3>Passeio</h3>
-          <p>
-            Muito melhor do que passear pela orla a vidros fechados.
-          </p>
+
+        <div class="portifolio-item">
+          <img src="img/portfolio/retro.jpg" alt="retro">
+        </div>
+
+        <div class="portifolio-item">
+          <img src="img/portfolio/esporte.jpg" alt="esporte">
         </div>
       </div>
 
-      <div class="produto-item">
-        <div class="produto-img">
-          <img src="img/produtos/esporte.svg" alt="Esporte">
-        </div>
-        <div class="produtos-descricao">
-          <h3>Esporte</h3>
-          <p>
-            Muito melhor do que passear pela orla a vidros fechados.
-          </p>
-        </div>
+      <div class="call-btn">
+        <p>Conheça mais nosso portifolio</p>
+        <a href="#" class="btn">portifolio</a>
+        </ul>
       </div>
 
-      <div class="produto-item">
-        <div class="produto-img">
-          <img src="img/produtos/retro.svg" alt="Retro">
+    </section>
+
+    <section class="qualidade">
+
+      <h2>qualidade</h2>
+
+      <img src="img/bikcraft-qualidade.svg" alt="qualidade" class="logo">
+
+      <div class="qtd-container">
+
+        <div class="qtd-item">
+          <h3>durabilidade</h3>
+          <p>Sólida como pedra, leve como o vento e resistente como o diamante, são nossos diferenciais</p>
         </div>
-        <div class="produtos-descricao">
-          <h3>Retro</h3>
-          <p>
-            Muito melhor do que passear pela orla a vidros fechados.
-          </p>
+
+        <div class="qtd-item">
+          <h3>design</h3>
+          <p>Feitas sob medida para o melhor conforto e eficiência. Adaptamos a sua Bikcraft para o seu corpo</p>
+        </div>
+
+        <div class="qtd-item">
+          <h3>sustentabilidade</h3>
+          <p>Além de ajudar a cuidar do meio ambiente, tirando carros da rua, toda a produção é sustentável.</p>
         </div>
       </div>
 
 
-    </div>
+    </section>
+    <ul class="call-to-action">
+      <li>
+        <p>conheça mais a nossa história</p>
+      </li>
+      <li><a href="#">sobre</a></li>
+    </ul>
 
-    <div class="call">
-      <p>Clic aqui e veja o detalhe dos produtos.</p>
-      <a href="#">produtos</a>
-    </div>
-  </section>
-
-  <!---PORTIFOLIO--->
-  <section class="portifolio">
-    <h2>portifolio</h2>
-
-    <div class="container-portifolio">
-
-      <div class="portifolio-item">
-        <img src="img/portfolio/passeio.jpg" alt="Passeio">
-      </div>
-
-      <div class="portifolio-item">
-        <img src="img/portfolio/retro.jpg" alt="retro">
-      </div>
-
-      <div class="portifolio-item">
-        <img src="img/portfolio/esporte.jpg" alt="esporte">
-      </div>
-    </div>
-
-    <div class="call-btn">
-      <p>Conheça mais nosso portifolio</p>
-      <a href="#" class="btn">portifolio</a>
-      </ul>
-    </div>
-
-  </section>
-
-  <section class="qualidade">
-
-    <h2>qualidade</h2>
-
-    <img src="img/bikcraft-qualidade.svg" alt="qualidade" class="logo">
-
-    <div class="qtd-container">
-
-      <div class="qtd-item">
-        <h3>durabilidade</h3>
-        <p>Sólida como pedra, leve como o vento e resistente como o diamante, são nossos diferenciais</p>
-      </div>
-
-      <div class="qtd-item">
-        <h3>design</h3>
-        <p>Feitas sob medida para o melhor conforto e eficiência. Adaptamos a sua Bikcraft para o seu corpo</p>
-      </div>
-
-      <div class="qtd-item">
-        <h3>sustentabilidade</h3>
-        <p>Além de ajudar a cuidar do meio ambiente, tirando carros da rua, toda a produção é sustentável.</p>
-      </div>
-    </div>
-
-
-  </section>
-  <ul class="call-to-action">
-    <li>
-      <p>conheça mais a nossa história</p>
-    </li>
-    <li><a href="#">sobre</a></li>
-  </ul>
-
-  s
+    s
 
 
 
-  <section class="footer">
-    <!-- 
+    <section class="footer">
+      <!-- 
   para obter a imagem de fundo é necessário ter um container
   envolvendo todos os outros elementos
  -->
-    <div class="bg-imagem">
-      <div class="container">
-        <blockquote>
-          <p>
-            "O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana" .
-          </p>
-          <cite>WILLIAM MORRI.</cite>
-        </blockquote>
-      </div>
-    </div>
-
-    <div class="bg-historia">
-
-      <div class="historia">
-        <h3>Nossa Historia</h3>
-
-        <p>Quando iniciamos a Bikcraft queriamos apenas um produto que adoraríamos utilizar. Eramos apaixonados por pedalar e também por fazer as coisas com as nossas próprias mãos. Assim surgiu um sonho na garagem da nossa casa.</p>
+      <div class="bg-imagem">
+        <div class="container">
+          <blockquote>
+            <p>
+              "O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana" .
+            </p>
+            <cite>WILLIAM MORRI.</cite>
+          </blockquote>
+        </div>
       </div>
 
-      <div class="contato">
-        <h3>contato</h3>
-        <ul>
-          <li> +55 21 9999-9999</li>
-          <li>contato@bikcraft.com</li>
-          <li>Rua Ali Perto - Botafogo</li>
-        </ul>
+      <div class="bg-historia">
+
+        <div class="historia">
+          <h3>Nossa Historia</h3>
+
+          <p>Quando iniciamos a Bikcraft queriamos apenas um produto que adoraríamos utilizar. Eramos apaixonados por pedalar e também por fazer as coisas com as nossas próprias mãos. Assim surgiu um sonho na garagem da nossa casa.</p>
+        </div>
+
+        <div class="contato">
+          <h3>contato</h3>
+          <ul>
+            <li> +55 21 9999-9999</li>
+            <li>contato@bikcraft.com</li>
+            <li>Rua Ali Perto - Botafogo</li>
+          </ul>
+        </div>
+
+        <div class="sociais">
+          <h3>redes sociais</h3>
+          <ul class="linha">
+            <li>
+              <img src="img/redes-sociais/facebook.svg" alt="facebook">
+            </li>
+            <li> <img src="img/redes-sociais/instagram.svg" alt="instagram"></li>
+            <li><img src="img/redes-sociais/twitter.svg" alt="twiter"></li>
+          </ul>
+
+        </div>
       </div>
 
-      <div class="sociais">
-        <h3>redes sociais</h3>
-        <ul class="linha">
-          <li>
-            <img src="img/redes-sociais/facebook.svg" alt="facebook">
-          </li>
-          <li> <img src="img/redes-sociais/instagram.svg" alt="instagram"></li>
-          <li><img src="img/redes-sociais/twitter.svg" alt="twiter"></li>
-        </ul>
-
+      <div class="bg-direitos">
+        <p>Bikcraft 2020 - Alguns direitos reservados.</p>
       </div>
-    </div>
-
-    <div class="bg-direitos">
-      <p>Bikcraft 2020 - Alguns direitos reservados.</p>
-    </div>
 
 
-  </section>
+    </section>
 
-
+  </div>
 
 
 
