trabalhando com responsividade

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </ul>
       </nav>
     </header>
-
+    <!-- INTRODUÇÃO -->
     <div class="introducao-bg">
       <div class="container-introducao">
         <h1>Bicicletas Feitas a Mão</h1>
@@ -36,16 +36,14 @@
           <p> " Não tenha nada em sua casa que você não considere útil ou acredita ser bonito ".</p>
           <cite>William Morri .</cite>
         </blockquote>
-
-
-        <a class="btn" href="#">Orçamento</a>
-
+        <a href="#" class="btn">Orçamento</a>
       </div>
     </div>
-
+    <!-- PRODUTOS -->
     <section class="produtos">
       <h2>Produtos</h2>
       <div class="container-produtos">
+        <!-- PASSEIO -->
         <div class="produto-item">
           <div class="produto-img">
             <img src="img/produtos/passeio.svg" alt="Passeio">
@@ -57,7 +55,7 @@
             </p>
           </div>
         </div>
-
+        <!-- ESPORTE -->
         <div class="produto-item">
           <div class="produto-img">
             <img src="img/produtos/esporte.svg" alt="Esporte">
@@ -69,7 +67,7 @@
             </p>
           </div>
         </div>
-
+        <!-- RETRO -->
         <div class="produto-item">
           <div class="produto-img">
             <img src="img/produtos/retro.svg" alt="Retro">
