trabalhando com responsividade- ainda

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
 
         <div class="portifolio-item">
-          <img src="img/portfolio/esporte.jpg" alt="esporte">
+          <img class="esportesvg" src="img/portfolio/esporte.png" alt="esporte">
         </div>
       </div>
 
@@ -148,10 +148,6 @@
       </li>
       <li><a href="#">sobre</a></li>
     </ul>
-
-    s
-
-
 
     <section class="footer">
       <!-- 
